--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,26 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "little-green-man/livewire-tests-generator",
+    "description": "Scaffold tests for your Livewire components",
     "keywords": [
-        ":vendor_name",
+        "little-green-man",
         "laravel",
-        ":package_slug"
+        "livewire-tests-generator"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/little-green-man/livewire-tests-generator",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Elliot Ali",
+            "email": "elliot@lgm.ltd",
             "role": "Developer"
         }
     ],
     "require": {
         "php": "^8.1",
+        "illuminate/contracts": "^10.0",
+        "livewire/livewire": "^2.0",
         "spatie/laravel-package-tools": "^1.14.0",
-        "illuminate/contracts": "^10.0"
+        "touhidurabir/laravel-stub-generator": "^1.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
@@ -35,13 +37,13 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src/",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories/"
+            "LittleGreenMan\\LivewireTestsGenerator\\": "src/",
+            "LittleGreenMan\\LivewireTestsGenerator\\Database\\Factories\\": "database/factories/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests/"
+            "LittleGreenMan\\LivewireTestsGenerator\\Tests\\": "tests/"
         }
     },
     "scripts": {
@@ -61,10 +63,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "LittleGreenMan\\LivewireTestsGenerator\\LivewireTestsGeneratorServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "LivewireTestsGenerator": "LittleGreenMan\\LivewireTestsGenerator\\Facades\\LivewireTestsGenerator"
             }
         }
     },
